# robot-inclusivity

./: .gitignore  BUILD.bat  INSTALL_DEPS.bat  README.md  README_FIRST.txt  README_WINDOWS.md  RUN_DEV.bat  bootstrap.sh  build_windows.py  color_scale  config.py  convert_map.py  installer.iss  launch.bat  launch.sh  package_for_windows.py  requirements.txt  rii_pipeline.py  rii_pipeline_horizontal.py  rii_pipeline_v2.py  rii_pipeline_v3.py
core/: RII_horizontal.py  RII_vertical.py  corridor_diagnosis.py  footprint_coverage.py  ground_analysis.py  level_detection.py  map_export.py  map_io.py  map_merge.py  project_io.py  rendering.py  semantic_analysis.py  semantic_selection.py  updater.py
cross_section/: __init__.py  detect.py  pcd_io.py  report.py  run.py
gui/: collapsible.py  combined_rii_dialog.py  help_dialog.py  main_window.py  main_window_horizontal.py  map_merge_dialog.py  step_indicator.py  update_dialog.py  widgets.py  workers.py
src/pcd_package/: how_to_process_map.txt  package.xml  setup.cfg  setup.py
src/pcd_package/final_2d_represntation/: map.yaml
src/pcd_package/pcd_package/: improved_publisher.py  keyframe_replay_to_octomap.py  pcd_publisher.py  pcd_to_occupancy_map.py  pcd_tools.py
src/pcd_package/preclean/: pre_map.py  preclean_pcd.py
src/pcd_package/test/: test_pcd_tools.py
